Falta agregar datos en json

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1>Catalogo Web </h1>
     </nav>
     <div class="cont-botones">
-        <a class="btn-volver hvr-bounce-to-right" href="#">Volver al listado</a>
+        
         <div class="buscador">
             <input type="search" placeholder="Busca por producto" name="" id="search">
             <a id="btn-buscar" href="resultadoSearch.html" target="_blank"><i class="fas fa-search"></i></a>
@@ -40,7 +40,7 @@
                 <article class="article-producto">
 
                     <h2 class="titulo"></h2>
-                    <img class="imagen" src="" alt="">
+                    <img class="imagen" data-img="img" src="" alt="">
                     <h2 class="categoria"></h2>
                     <h6 class="codigo"></h6>
 
