--- a/resultadoSearch.html
+++ b/resultadoSearch.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/resultadoSearch.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://kit.fontawesome.com/dfb3ba8b0a.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
@@ -14,6 +15,9 @@
     
     <div class="titulo-categoriaUno">
         <h3>Categoria 1</h3>
+    </div>
+    <div class="cerrar">
+        <a id="btn-cerrar" class="btn-cerrar" href="index.html"><i class="fas fa-window-close"></i></a>
     </div>
     
     <section id="searchs">
