--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./css/items-nav.css">
     <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="./css/resultadoDescripcion.css">
+    <link rel="stylesheet" href="./css/normalize.css">
 
 
     <script src="https://kit.fontawesome.com/dfb3ba8b0a.js"></script>
